integrate dataset manager in import dialog

--- a/QgisModelBaker/ui/dataset_manager.ui
+++ b/QgisModelBaker/ui/dataset_manager.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>376</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,7 @@
     </widget>
    </item>
    <item row="1" column="0">
-    <widget class="QFrame" name="content_frame">
+    <widget class="QFrame" name="db_frame">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
