--- a/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
+++ b/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
@@ -48,6 +48,26 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="2" column="0">
+       <widget class="QLabel" name="export_models_label">
+        <property name="text">
+         <string>Models</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="xtf_file_line_edit"/>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="xtf_file_label">
+        <property name="text">
+         <string>XTF File</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1" rowspan="2" colspan="2">
+       <widget class="ModelListView" name="export_models_view" native="true"/>
+      </item>
       <item row="0" column="2">
        <widget class="QToolButton" name="xtf_file_browse_button">
         <property name="toolTip">
@@ -58,42 +78,29 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="5" column="0">
        <widget class="QLabel" name="export_datasets_label">
         <property name="text">
          <string>Datasets</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="export_models_label">
+      <item row="4" column="1" colspan="2">
+       <widget class="QCheckBox" name="export_datasets_checkbox">
         <property name="text">
-         <string>Models</string>
+         <string>Export all datasets</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="5" column="1" colspan="2">
+       <widget class="ModelListView" name="export_datasets_view" native="true"/>
+      </item>
+      <item row="1" column="1" colspan="2">
        <widget class="QCheckBox" name="export_models_checkbox">
         <property name="text">
          <string>Export all models</string>
         </property>
        </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="xtf_file_label">
-        <property name="text">
-         <string>XTF File</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="ModelListView" name="export_models_view" native="true"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="xtf_file_line_edit"/>
-      </item>
-      <item row="3" column="1">
-       <widget class="QComboBox" name="export_dataset_combo"/>
       </item>
      </layout>
     </widget>
