avoid having buttons labled with 'Push Button' because this would be sent to the translation engine

--- a/QgisModelBaker/ui/generate_project.ui
+++ b/QgisModelBaker/ui/generate_project.ui
@@ -252,7 +252,7 @@
          <item>
           <widget class="QPushButton" name="create_button">
            <property name="text">
-            <string>PushButton</string>
+            <string>Create</string>
            </property>
           </widget>
          </item>
