--- a/QgisModelBaker/ui/edit_dataset_name.ui
+++ b/QgisModelBaker/ui/edit_dataset_name.ui
@@ -37,7 +37,7 @@
    <item row="2" column="2">
     <widget class="QPushButton" name="ok_button">
      <property name="text">
-      <string>PushButton</string>
+      <string>Ok</string>
      </property>
     </widget>
    </item>
