--- a/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
+++ b/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
@@ -86,9 +86,9 @@
        </widget>
       </item>
       <item row="4" column="1" colspan="2">
-       <widget class="QCheckBox" name="export_datasets_checkbox">
-        <property name="text">
-         <string>Export all datasets</string>
+       <widget class="SemiTristateCheckbox" name="export_datasets_checkbox" native="true">
+        <property name="text" stdset="0">
+         <string>Select all datasets</string>
         </property>
        </widget>
       </item>
@@ -96,9 +96,9 @@
        <widget class="ModelListView" name="export_datasets_view" native="true"/>
       </item>
       <item row="1" column="1" colspan="2">
-       <widget class="QCheckBox" name="export_models_checkbox">
-        <property name="text">
-         <string>Export all models</string>
+       <widget class="SemiTristateCheckbox" name="export_models_checkbox" native="true">
+        <property name="text" stdset="0">
+         <string>Select all models</string>
         </property>
        </widget>
       </item>
@@ -113,6 +113,11 @@
    <extends></extends>
    <header>QgisModelBaker.gui.options</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>SemiTristateCheckbox</class>
+   <extends>QWidget</extends>
+   <header>QgisModelBaker.gui.options</header>
   </customwidget>
  </customwidgets>
  <resources/>
