--- a/QgisModelBaker/ui/dataset_manager.ui
+++ b/QgisModelBaker/ui/dataset_manager.ui
@@ -44,22 +44,14 @@
        <item row="0" column="0">
         <widget class="QToolButton" name="add_button">
          <property name="text">
-          <string>...</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>../images/symbologyAdd.svg</normaloff>../images/symbologyAdd.svg</iconset>
+          <string>Create Dataset</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QToolButton" name="edit_button">
          <property name="text">
-          <string>...</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>../images/symbologyEdit.svg</normaloff>../images/symbologyEdit.svg</iconset>
+          <string>Rename Dataset</string>
          </property>
         </widget>
        </item>
