--- a/QgisModelBaker/ui/edit_dataset_name.ui
+++ b/QgisModelBaker/ui/edit_dataset_name.ui
@@ -39,6 +39,9 @@
      <property name="text">
       <string>Ok</string>
      </property>
+     <property name="default">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item row="0" column="1" colspan="2">
