--- a/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
+++ b/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
@@ -39,8 +39,14 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="1" column="0">
     <widget class="QFrame" name="frame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
@@ -48,6 +54,30 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="1" colspan="2">
+       <widget class="QLineEdit" name="xtf_file_line_edit"/>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="export_datasets_label">
+        <property name="text">
+         <string>Datasets</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="1" colspan="3">
+       <widget class="SemiTristateCheckbox" name="export_baskets_checkbox" native="true">
+        <property name="text" stdset="0">
+         <string>Select all baskets</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" colspan="4">
+       <widget class="SemiTristateCheckbox" name="export_models_checkbox" native="true">
+        <property name="text" stdset="0">
+         <string>Select all models</string>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="0">
        <widget class="QLabel" name="export_models_label">
         <property name="text">
@@ -55,8 +85,15 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="xtf_file_line_edit"/>
+      <item row="7" column="1" colspan="4">
+       <widget class="ModelListView" name="export_baskets_view" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="xtf_file_label">
@@ -65,10 +102,17 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1" rowspan="2" colspan="2">
-       <widget class="ModelListView" name="export_models_view" native="true"/>
+      <item row="2" column="1" rowspan="2" colspan="4">
+       <widget class="ModelListView" name="export_models_view" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
       </item>
-      <item row="0" column="2">
+      <item row="0" column="4">
        <widget class="QToolButton" name="xtf_file_browse_button">
         <property name="toolTip">
          <string>Browse XTF files</string>
@@ -78,27 +122,20 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="export_datasets_label">
+      <item row="7" column="0">
+       <widget class="QLabel" name="export_baskets_label">
         <property name="text">
-         <string>Datasets</string>
+         <string>Baskets</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1" colspan="2">
+      <item row="5" column="1" colspan="4">
+       <widget class="ModelListView" name="export_datasets_view" native="true"/>
+      </item>
+      <item row="4" column="1" colspan="4">
        <widget class="SemiTristateCheckbox" name="export_datasets_checkbox" native="true">
         <property name="text" stdset="0">
          <string>Select all datasets</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="1" colspan="2">
-       <widget class="ModelListView" name="export_datasets_view" native="true"/>
-      </item>
-      <item row="1" column="1" colspan="2">
-       <widget class="SemiTristateCheckbox" name="export_models_checkbox" native="true">
-        <property name="text" stdset="0">
-         <string>Select all models</string>
         </property>
        </widget>
       </item>
