--- a/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
+++ b/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
@@ -54,17 +54,27 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="8" column="1" colspan="4">
-       <widget class="ModelListView" name="export_baskets_view" native="true">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+      <item row="0" column="0">
+       <widget class="QLabel" name="xtf_file_label">
+        <property name="text">
+         <string>XTF File</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="4">
+      <item row="1" column="1" colspan="3">
+       <widget class="QComboBox" name="filter_combobox"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Filter</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" colspan="2">
+       <widget class="QLineEdit" name="xtf_file_line_edit"/>
+      </item>
+      <item row="0" column="3">
        <widget class="QToolButton" name="xtf_file_browse_button">
         <property name="toolTip">
          <string>Browse XTF files</string>
@@ -74,53 +84,8 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
-       <widget class="QLabel" name="export_datasets_label">
-        <property name="text">
-         <string>Datasets</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="1" colspan="4">
-       <widget class="ModelListView" name="export_datasets_view" native="true"/>
-      </item>
-      <item row="5" column="1" colspan="4">
-       <widget class="SemiTristateCheckbox" name="export_datasets_checkbox" native="true">
-        <property name="text" stdset="0">
-         <string>Select all datasets</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="1" colspan="3">
-       <widget class="SemiTristateCheckbox" name="export_baskets_checkbox" native="true">
-        <property name="text" stdset="0">
-         <string>Select all baskets</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1" colspan="4">
-       <widget class="SemiTristateCheckbox" name="export_models_checkbox" native="true">
-        <property name="text" stdset="0">
-         <string>Select all models</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="export_models_label">
-        <property name="text">
-         <string>Models</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="0">
-       <widget class="QLabel" name="export_baskets_label">
-        <property name="text">
-         <string>Baskets</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1" rowspan="2" colspan="4">
-       <widget class="ModelListView" name="export_models_view" native="true">
+      <item row="3" column="0" rowspan="2" colspan="4">
+       <widget class="ModelListView" name="export_items_view" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -129,25 +94,12 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="xtf_file_label">
-        <property name="text">
-         <string>XTF File</string>
+      <item row="2" column="0" colspan="4">
+       <widget class="SemiTristateCheckbox" name="select_all_checkbox" native="true">
+        <property name="text" stdset="0">
+         <string>Select all models</string>
         </property>
        </widget>
-      </item>
-      <item row="0" column="1" colspan="3">
-       <widget class="QLineEdit" name="xtf_file_line_edit"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Filter</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1" colspan="4">
-       <widget class="QComboBox" name="filter_combobox"/>
       </item>
      </layout>
     </widget>
