--- a/QgisModelBaker/ui/filter_data_panel.ui
+++ b/QgisModelBaker/ui/filter_data_panel.ui
@@ -6,24 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>605</width>
+    <height>123</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QLabel" name="filter_label">
-     <property name="text">
-      <string>Filter</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QComboBox" name="filter_combobox"/>
-   </item>
    <item row="1" column="0" colspan="2">
     <widget class="SemiTristateCheckbox" name="select_all_checkbox" native="true">
      <property name="text" stdset="0">
@@ -32,7 +22,7 @@
     </widget>
    </item>
    <item row="2" column="0" colspan="2">
-    <widget class="ModelListView" name="export_items_view" native="true">
+    <widget class="ModelListView" name="items_view" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
        <horstretch>0</horstretch>
@@ -40,6 +30,9 @@
       </sizepolicy>
      </property>
     </widget>
+   </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QComboBox" name="filter_combobox"/>
    </item>
   </layout>
  </widget>
