--- a/QgisModelBaker/ui/validator.ui
+++ b/QgisModelBaker/ui/validator.ui
@@ -11,24 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Model Baker Data Validation</string>
+   <string>Model Baker Data Validator</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
-   <layout class="QVBoxLayout" name="verticalLayout_3">
-    <item>
-     <widget class="QLabel" name="info_label">
-      <property name="text">
-       <string/>
-      </property>
-      <property name="wordWrap">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <layout class="QVBoxLayout" name="filter_layout"/>
-    </item>
-    <item>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="3" column="0">
      <widget class="QWidget" name="validation_layout" native="true">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
@@ -51,6 +38,25 @@
        </item>
        <item>
         <widget class="QTableView" name="result_table_view"/>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <layout class="QVBoxLayout" name="filter_layout"/>
+    </item>
+    <item row="0" column="0">
+     <widget class="QWidget" name="widget" native="true">
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="0">
+        <widget class="QLabel" name="info_label">
+         <property name="text">
+          <string/>
+         </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
