--- a/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
+++ b/QgisModelBaker/ui/workflow_wizard/export_data_configuration.ui
@@ -54,25 +54,22 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="1" column="0" colspan="4">
+       <layout class="QVBoxLayout" name="filter_layout">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+       </layout>
+      </item>
+      <item row="0" column="1" colspan="2">
+       <widget class="QLineEdit" name="xtf_file_line_edit"/>
+      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="xtf_file_label">
         <property name="text">
          <string>XTF File</string>
         </property>
        </widget>
-      </item>
-      <item row="1" column="1" colspan="3">
-       <widget class="QComboBox" name="filter_combobox"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Filter</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" colspan="2">
-       <widget class="QLineEdit" name="xtf_file_line_edit"/>
       </item>
       <item row="0" column="3">
        <widget class="QToolButton" name="xtf_file_browse_button">
@@ -84,41 +81,27 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0" rowspan="2" colspan="4">
-       <widget class="ModelListView" name="export_items_view" native="true">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+      <item row="2" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
         </property>
-       </widget>
-      </item>
-      <item row="2" column="0" colspan="4">
-       <widget class="SemiTristateCheckbox" name="select_all_checkbox" native="true">
-        <property name="text" stdset="0">
-         <string>Select all models</string>
+        <property name="sizeType">
+         <enum>QSizePolicy::Expanding</enum>
         </property>
-       </widget>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </widget>
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>ModelListView</class>
-   <extends></extends>
-   <header>QgisModelBaker.gui.options</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>SemiTristateCheckbox</class>
-   <extends>QWidget</extends>
-   <header>QgisModelBaker.gui.options</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
