--- a/QgisModelBaker/ui/filter_data_panel.ui
+++ b/QgisModelBaker/ui/filter_data_panel.ui
@@ -22,7 +22,7 @@
     </widget>
    </item>
    <item row="2" column="0" colspan="2">
-    <widget class="ModelListView" name="items_view" native="true">
+    <widget class="SpaceCheckListView" name="items_view" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
        <horstretch>0</horstretch>
@@ -38,7 +38,7 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ModelListView</class>
+   <class>SpaceCheckListView</class>
    <extends></extends>
    <header>QgisModelBaker.utils.gui_utils</header>
    <container>1</container>
