--- a/QgisModelBaker/ui/workflow_wizard/import_schema_configuration.ui
+++ b/QgisModelBaker/ui/workflow_wizard/import_schema_configuration.ui
@@ -123,7 +123,7 @@
        </widget>
       </item>
       <item row="1" column="0" colspan="3">
-       <widget class="ModelListView" name="model_list_view" native="true"/>
+       <widget class="SpaceCheckListView" name="model_list_view" native="true"/>
       </item>
      </layout>
     </widget>
@@ -144,7 +144,7 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>ModelListView</class>
+   <class>SpaceCheckListView</class>
    <extends></extends>
    <header>QgisModelBaker.utils.gui_utils</header>
    <container>1</container>
