--- a/QgisModelBaker/ui/pg_settings_panel.ui
+++ b/QgisModelBaker/ui/pg_settings_panel.ui
@@ -14,31 +14,7 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="5" column="0" colspan="2">
-    <widget class="QCheckBox" name="pg_use_super_login">
-     <property name="text">
-      <string>Use logins from settings (superuser) for schema generation</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0" colspan="2">
-    <widget class="QgsAuthSettingsWidget" name="pg_auth_settings" native="true"/>
-   </item>
-   <item row="3" column="1">
-    <widget class="QLineEdit" name="pg_schema_line_edit">
-     <property name="placeholderText">
-      <string/>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="label_9">
-     <property name="text">
-      <string>Host</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
+   <item row="1" column="1">
     <widget class="QLineEdit" name="pg_host_line_edit">
      <property name="text">
       <string>localhost</string>
@@ -48,40 +24,74 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="4" column="0">
+    <widget class="QLabel" name="pg_schema_label">
+     <property name="text">
+      <string>Schema</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="pg_port_label">
+     <property name="text">
+      <string>Port</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0" colspan="2">
+    <widget class="QCheckBox" name="pg_use_super_login">
+     <property name="text">
+      <string>Use logins from settings (superuser) for schema generation</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
     <widget class="QLineEdit" name="pg_database_line_edit">
      <property name="placeholderText">
       <string>Database Name</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="label_3">
-     <property name="text">
-      <string>Schema</string>
+   <item row="4" column="1">
+    <widget class="QLineEdit" name="pg_schema_line_edit">
+     <property name="placeholderText">
+      <string/>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="1" column="0">
+    <widget class="QLabel" name="pg_host_label">
+     <property name="text">
+      <string>Host</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0" colspan="2">
+    <widget class="QgsAuthSettingsWidget" name="pg_auth_settings" native="true"/>
+   </item>
+   <item row="2" column="1">
     <widget class="QLineEdit" name="pg_port_line_edit">
      <property name="placeholderText">
       <string>[Leave empty to use standard port 5432]</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label_8">
-     <property name="text">
-      <string>Port</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="label_6">
+   <item row="3" column="0">
+    <widget class="QLabel" name="pg_database_label">
      <property name="text">
       <string>Database</string>
      </property>
     </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Service</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="pg_service_combo_box"/>
    </item>
   </layout>
  </widget>
