--- a/QgisModelBaker/ui/topping_wizard/layer_style_categories.ui
+++ b/QgisModelBaker/ui/topping_wizard/layer_style_categories.ui
@@ -35,10 +35,20 @@
     </widget>
    </item>
    <item row="0" column="0" colspan="2">
-    <widget class="QListView" name="style_categories_list_view"/>
+    <widget class="SpaceCheckListView" name="style_categories_list_view"/>
    </item>
   </layout>
  </widget>
+
+ <customwidgets>
+  <customwidget>
+   <class>SpaceCheckListView</class>
+   <extends></extends>
+   <header>QgisModelBaker.utils.gui_utils</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
+
  <resources/>
  <connections>
   <connection>
