--- a/QgisModelBaker/ui/topping_wizard/layers.ui
+++ b/QgisModelBaker/ui/topping_wizard/layers.ui
@@ -14,14 +14,7 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0" colspan="2">
-    <widget class="QTreeView" name="layer_table_view">
-     <property name="sortingEnabled">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="2">
+   <item row="0" column="0">
     <widget class="QLabel" name="description">
      <property name="minimumSize">
       <size>
@@ -43,6 +36,23 @@
      </property>
      <property name="wordWrap">
       <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QTreeView" name="layer_table_view">
+     <property name="sortingEnabled">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:large; color:#9bcade;&quot;&gt;▪ &lt;/span&gt;INTERLIS Layers, &lt;span style=&quot; font-size:large; color:#a1de9b;&quot;&gt;▪ &lt;/span&gt;other Layers&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::RichText</enum>
      </property>
     </widget>
    </item>
