--- a/QgisModelBaker/ui/topping_wizard/generation.ui
+++ b/QgisModelBaker/ui/topping_wizard/generation.ui
@@ -14,6 +14,33 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="3" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>584</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="3" column="1">
+    <widget class="QCommandLinkButton" name="run_generate_button">
+     <property name="text">
+      <string>Generate Topping Files</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="QProgressBar" name="progress_bar">
+     <property name="value">
+      <number>0</number>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0">
     <widget class="QLabel" name="description">
      <property name="minimumSize">
@@ -39,39 +66,8 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QProgressBar" name="progress_bar">
-     <property name="value">
-      <number>0</number>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>584</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="3" column="1">
-    <widget class="QCommandLinkButton" name="run_generate_button">
-     <property name="text">
-      <string>Generate Topping Files</string>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="0" colspan="2">
-    <widget class="QTextEdit" name="info_text_edit">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-    </widget>
+    <widget class="QTextBrowser" name="info_text_box"/>
    </item>
   </layout>
  </widget>
