only pan when feature has geometry (and zoom to feature)
do flash coordinates and features geometry

--- a/QgisModelBaker/ui/validator.ui
+++ b/QgisModelBaker/ui/validator.ui
@@ -103,7 +103,7 @@
       <item>
        <widget class="QToolButton" name="auto_zoom_button">
         <property name="toolTip">
-         <string>Automatically zoom to the current feature</string>
+         <string>Automatically zoom to the current feature / coordinates</string>
         </property>
         <property name="text">
          <string>...</string>
